--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+pixel-font-builder==0.0.2
 fonttools==4.39.4
-Brotli==1.0.9
 unidata-blocks==0.0.3
 character-encoding-utils==0.0.5
 pypng==0.20220715.0
 Pillow==9.5.0
+beautifulsoup4==4.12.2
 Jinja2==3.1.2
 GitPython==3.1.31
 requests==2.31.0
