调整回退策略

--- a/assets/fonts/fallback-configs.yaml
+++ b/assets/fonts/fallback-configs.yaml
@@ -67,7 +67,7 @@
   font_size: 8
   from_dir: boutique-bitmap/4E00-9FFF CJK Unified Ideographs
   to_dir: common
-  flavor: zh_tw
+  flavor: zh_hk,zh_tw,zh_tr
 -
   font_size: 8
   from_dir: misaki/4E00-9FFF CJK Unified Ideographs
@@ -82,7 +82,7 @@
   font_size: 10
   from_dir: boutique-bitmap/4E00-9FFF CJK Unified Ideographs
   to_dir: common
-  flavor: zh_tw
+  flavor: zh_hk,zh_tw,zh_tr
 -
   font_size: 10
   from_dir: galmuri/4E00-9FFF CJK Unified Ideographs
@@ -92,7 +92,7 @@
   font_size: 12
   from_dir: cubic-11/4E00-9FFF CJK Unified Ideographs
   to_dir: common
-  flavor: zh_tw
+  flavor: zh_hk,zh_tw,zh_tr
 -
   font_size: 12
   from_dir: galmuri/4E00-9FFF CJK Unified Ideographs
