--- a/.github/workflows/release-12px-monospaced.yml
+++ b/.github/workflows/release-12px-monospaced.yml
@@ -19,8 +19,8 @@ jobs:
         python-version: '3.x'
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python -m pip install pip --upgrade
+        python -m pip install -r requirements.txt
     - name: Build
       run: python -m scripts.tasks.release_12px_monospaced
     - name: Release
