--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 pixel-font-builder==0.0.25
-fonttools==4.51.0
+fonttools==4.52.4
 unidata-blocks==0.0.11
 character-encoding-utils==0.0.8
 PyYAML==6.0.1
 pypng==0.20220715.0
-Pillow==10.3.0
+pillow==10.3.0
 beautifulsoup4==4.12.3
 Jinja2==3.1.4
 GitPython==3.1.43
-requests==2.32.1
+requests==2.32.2
