--- a/assets/fallback-configs.yaml
+++ b/assets/fallback-configs.yaml
@@ -1,15 +1,15 @@
 # 基础兼容
 -
   font_size: 8
-  dir_from: chill-bitmap/0080-00FF Latin-1 Supplement
+  dir_from: miseki-bitmap/0080-00FF Latin-1 Supplement
   dir_to: common
 -
   font_size: 8
-  dir_from: chill-bitmap/0100-017F Latin Extended-A
+  dir_from: miseki-bitmap/0100-017F Latin Extended-A
   dir_to: common
 -
   font_size: 8
-  dir_from: chill-bitmap/0180-024F Latin Extended-B
+  dir_from: miseki-bitmap/0180-024F Latin Extended-B
   dir_to: common
 -
   font_size: 8
@@ -21,15 +21,15 @@
   dir_to: common
 -
   font_size: 8
-  dir_from: chill-bitmap/2200-22FF Mathematical Operators
+  dir_from: miseki-bitmap/2200-22FF Mathematical Operators
   dir_to: common
 -
   font_size: 8
-  dir_from: chill-bitmap/2460-24FF Enclosed Alphanumerics
+  dir_from: miseki-bitmap/2460-24FF Enclosed Alphanumerics
   dir_to: common
 -
   font_size: 8
-  dir_from: chill-bitmap/2600-26FF Miscellaneous Symbols
+  dir_from: miseki-bitmap/2600-26FF Miscellaneous Symbols
   dir_to: common
 -
   font_size: 8
@@ -41,15 +41,15 @@
   dir_to: common
 -
   font_size: 8
-  dir_from: chill-bitmap/FE10-FE1F Vertical Forms
+  dir_from: galmuri/FE10-FE1F Vertical Forms
   dir_to: common
 -
   font_size: 8
-  dir_from: chill-bitmap/FE30-FE4F CJK Compatibility Forms
+  dir_from: boutique-bitmap/FE30-FE4F CJK Compatibility Forms
   dir_to: common
 -
   font_size: 8
-  dir_from: chill-bitmap/FE50-FE6F Small Form Variants
+  dir_from: boutique-bitmap/FE50-FE6F Small Form Variants
   dir_to: common
 -
   font_size: 8
@@ -60,7 +60,7 @@
 # 汉字
 -
   font_size: 8
-  dir_from: chill-bitmap/4E00-9FFF CJK Unified Ideographs
+  dir_from: miseki-bitmap/4E00-9FFF CJK Unified Ideographs
   dir_to: common
   flavor: zh_cn
 -
