--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 pixel-font-builder==0.0.26
+pixel-font-knife==0.0.1
 fonttools==4.53.0
 unidata-blocks==0.0.13
 character-encoding-utils==0.0.8
 PyYAML==6.0.1
-pypng==0.20220715.0
 pillow==10.3.0
 beautifulsoup4==4.12.3
 Jinja2==3.1.4
