--- a/assets/dump-configs.yml
+++ b/assets/dump-configs.yml
@@ -1,52 +1,52 @@
 misaki:
   -
-    font_file_name: misaki_gothic.ttf
-    dump_dir_name: misaki
-    font_size: 8
-    rasterize_offset_y: 1
+    font-file-name: misaki_gothic.ttf
+    dump-dir-name: misaki
+    font-size: 8
+    rasterize-offset-y: 1
 miseki-bitmap:
   -
-    font_file_name: MisekiBitmap.ttf
-    dump_dir_name: miseki-bitmap
-    font_size: 8
-    rasterize_offset_y: 1
+    font-file-name: MisekiBitmap.ttf
+    dump-dir-name: miseki-bitmap
+    font-size: 8
+    rasterize-offset-y: 1
 boutique-bitmap-7x7:
   -
-    font_file_name: BoutiqueBitmap7x7_{version}.ttf
-    dump_dir_name: boutique-bitmap
-    font_size: 8
-    rasterize_offset_y: 1
+    font-file-name: BoutiqueBitmap7x7_{version}.ttf
+    dump-dir-name: boutique-bitmap
+    font-size: 8
+    rasterize-offset-y: 1
 boutique-bitmap-9x9:
   -
-    font_file_name: BoutiqueBitmap9x9_{version}.ttf
-    dump_dir_name: boutique-bitmap
-    font_size: 10
-    rasterize_offset_y: 1
+    font-file-name: BoutiqueBitmap9x9_{version}.ttf
+    dump-dir-name: boutique-bitmap
+    font-size: 10
+    rasterize-offset-y: 1
 cubic-11:
   -
-    font_file_name: Cubic_11_{version}_R.woff2
-    dump_dir_name: cubic-11
-    font_size: 12
-    rasterize_offset_x: -1
-    rasterize_offset_y: 1
+    font-file-name: Cubic_11_{version}_R.woff2
+    dump-dir-name: cubic-11
+    font-size: 12
+    rasterize-offset-x: -1
+    rasterize-offset-y: 1
 galmuri:
   -
-    font_file_name: Galmuri7.ttf
-    dump_dir_name: galmuri
-    font_size: 8
-    rasterize_offset_y: 1
+    font-file-name: Galmuri7.ttf
+    dump-dir-name: galmuri
+    font-size: 8
+    rasterize-offset-y: 1
   -
-    font_file_name: Galmuri9.ttf
-    dump_dir_name: galmuri
-    font_size: 10
-    rasterize_offset_y: 1
+    font-file-name: Galmuri9.ttf
+    dump-dir-name: galmuri
+    font-size: 10
+    rasterize-offset-y: 1
   -
-    font_file_name: Galmuri11.ttf
-    dump_dir_name: galmuri
-    font_size: 12
-    rasterize_offset_y: 1
+    font-file-name: Galmuri11.ttf
+    dump-dir-name: galmuri
+    font-size: 12
+    rasterize-offset-y: 1
   -
-    font_file_name: GalmuriMono7.ttf
-    dump_dir_name: galmuri-monospaced
-    font_size: 8
-    rasterize_offset_y: 1
+    font-file-name: GalmuriMono7.ttf
+    dump-dir-name: galmuri-monospaced
+    font-size: 8
+    rasterize-offset-y: 1
