--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,7 +29,7 @@ jobs:
           python -m pip install pip --upgrade
           python -m pip install -r requirements.txt
       - name: Build
-        run: python -m tools.build_www
+        run: python -m tools.cli --cleanup --font-formats woff2 --html
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
