调整 font_formats 配置顺序

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         font-size: [8, 10, 12]
         width-mode: [monospaced, proportional]
-        font-format: [otf, woff2, ttf, bdf, pcf, otc, ttc]
+        font-format: [otf, ttf, woff2, bdf, pcf, otc, ttc]
       fail-fast: false
     runs-on: ubuntu-latest
     steps:
