--- a/assets/dump-configs.yml
+++ b/assets/dump-configs.yml
@@ -24,7 +24,7 @@ boutique-bitmap-9x9:
     rasterize-offset-y: 1
 cubic-11:
   -
-    font-file-name: Cubic_11_{version}_R.woff2
+    font-file-name: Cubic_11.woff2
     dump-dir-name: cubic-11
     font-size: 12
     rasterize-offset-x: -1
