--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pixel-font-builder==0.0.28
 pixel-font-knife==0.0.7
-fonttools==4.54.1
+fonttools[woff]==4.55.0
 unidata-blocks==0.0.15
 character-encoding-utils==0.0.8
 PyYAML==6.0.2
@@ -9,4 +9,4 @@ beautifulsoup4==4.12.3
 Jinja2==3.1.4
 httpx==0.27.2
 loguru==0.7.2
-cyclopts==2.9.9
+cyclopts==3.1.0
