--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-pixel-font-builder==0.0.34
-pixel-font-knife==0.0.11
-fonttools[woff]==4.56.0
-unidata-blocks==0.0.16
+pixel-font-builder==0.0.37
+pixel-font-knife==0.0.16
+fonttools[woff]==4.58.4
+unidata-blocks==0.0.17
 character-encoding-utils==0.0.9
-PyYAML==6.0.2
-pillow==11.1.0
-beautifulsoup4==4.13.3
-Jinja2==3.1.6
+pyyaml==6.0.2
+pillow==11.3.0
+beautifulsoup4==4.13.4
+jinja2==3.1.6
 httpx[http2]==0.28.1
 tqdm==4.67.1
 loguru==0.7.3
-cyclopts==3.9.3
+cyclopts==3.22.0
