--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -19,21 +19,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.x"
+        uses: actions/checkout@v5
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v7
       - name: Install dependencies
-        run: |
-          python -m pip install pip --upgrade
-          python -m pip install -r requirements.txt
+        run: uv sync
       - name: Build
-        run: python -m tools.cli --cleanup --font-formats otf.woff2 --attachments html
+        run: uv run -m tools.cli --cleanup --font-formats otf.woff2 --attachments html
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-pages-artifact@v4
         with:
           path: ./build/outputs
       - name: Deploy to GitHub Pages
