--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,17 +17,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.x"
+        uses: actions/checkout@v5
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v7
       - name: Install dependencies
-        run: |
-          python -m pip install pip --upgrade
-          python -m pip install -r requirements.txt
+        run: uv sync
       - name: Build
-        run: python -m tools.cli --cleanup --font-sizes ${{ matrix.font-size }} --width-modes ${{ matrix.width-mode }} --font-formats ${{ matrix.font-format }} --attachments release
+        run: uv run -m tools.cli --cleanup --font-sizes ${{ matrix.font-size }} --width-modes ${{ matrix.width-mode }} --font-formats ${{ matrix.font-format }} --attachments release
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
