--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "pixel-font-builder==0.0.47",
     "pixel-font-knife==0.0.20",
     "fonttools[woff]==4.61.1",
+    "unicodedata2==17.0.0",
     "unidata-blocks==0.0.23",
     "character-encoding-utils==0.0.11",
     "pyyaml==6.0.3",
